# d2vsource

./: .gitignore  Makefile.am  README  README.md  configure  configure.ac  d2vsource.sln  d2vsource.vcxproj  d2vsource.vcxproj.filters  meson.build  pyproject.toml
.github/workflows/: build.yml
core/: compat.cpp  compat.hpp  d2v.cpp  d2v.hpp  decode.cpp  decode.hpp  gop.hpp
msvc/: d2vsource.sln  d2vsource.vcxproj  d2vsource.vcxproj.filters
src/core/: compat.cpp  compat.hpp  d2v.cpp  d2v.hpp  decode.cpp  decode.hpp  gop.hpp
src/vs/: applyrff.cpp  applyrff.hpp  d2vsource.cpp  d2vsource.hpp  directrender.cpp  vapoursynth.cpp
src/vs4/: applyrff4.cpp  applyrff4.hpp  d2vsource4.cpp  d2vsource4.hpp  directrender4.cpp  directrender4.hpp  vapoursynth4.cpp
vs/: applyrff.cpp  d2vsource.cpp  d2vsource.hpp  directrender.cpp  directrender.hpp  libavversion.h  vapoursynth.cpp
