[build-system]
requires = ["meson-python", "vapoursynth"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-subtext"
description = "D2V source filter for VapourSynth"
readme = "README"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
license-files = ["COPYING"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},
]
keywords = ["source", "video", "d2v"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/dwbuiten/d2vsource.git"
Issues = "https://github.com/dwbuiten/d2vsource/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a", "*/*.lib"]
